@@ -1,3 +1,7 @@
+2011-11-25  Jean-Louis Martineau <martineau@zmanda.com>
+	* installcheck/gnutar.pl: Change expectations to an array that can be
+	  scanned in order, fix for tar-1.25 on fc15.
+
 2011-11-22  Jean-Louis Martineau <martineau@zmanda.com>
 	* installcheck/Makefile.am: rm with '-f'.
 
